--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,8 +1,3 @@
-.maparecinto{
-	color: white;
-	text-decoration: underline;
-}
-
 .map-container {
 	width: 100%;
 	margin: 50px 0 3000px;
@@ -15,4 +10,12 @@
 }
 .map-container iframe.clicked{
 	pointer-events: auto;
+}
+
+.texto-mapa{
+	color: #20aae1;
+}
+
+#texto-header {
+	margin-top: 10px;
 }
