--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,18 @@
+@font-face {
+    font-family: Avenir;
+    src: url('../fonts/AvenirNextLTPro-Regular.otf');
+}
+
+@font-face {
+    font-family: Avenir;
+    src: url('../fonts/AvenirNextLTPro-Bold.otf');
+    font-weight: bold;
+}
+
+html, body {
+	font-family: Avenir;
+}
+
 .map-container {
 	width: 100%;
 	margin: 50px 0 3000px;
